# ChangeLog for dev-php/adodb
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/adodb/ChangeLog,v 1.68 2007/07/24 18:37:02 armin76 Exp $

  24 Jul 2007; Raúl Porcel <armin76@gentoo.org> adodb-4.94.ebuild:
  alpha/ia64 stable

  19 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> adodb-4.94.ebuild:
  Stable on sparc

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> adodb-4.94.ebuild:
  Stable on ppc64

*adodb-4.94 (18 Mar 2007)

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> adodb-4.72.ebuild,
  -adodb-4.90.ebuild, +adodb-4.94.ebuild:
  Version bump.

  17 Mar 2007; Steve Dibb <beandog@gentoo.org> adodb-4.90.ebuild:
  amd64 stable

  27 Feb 2007; Guy Martin <gmsoft@gentoo.org> adodb-4.90.ebuild:
  Stable on hppa

*adodb-4.90 (23 Jul 2006)

  23 Jul 2006; Luca Longinotti <chtekk@gentoo.org> +adodb-4.90.ebuild:
  Version bump.

  25 May 2006; Michael Hanselmann <hansmi@gentoo.org> adodb-4.72.ebuild:
  Stable on sparc.

  23 May 2006; Luca Longinotti <chtekk@gentoo.org> -adodb-4.68.ebuild,
  -adodb-4.71.ebuild:
  Spring cleanup.

  21 May 2006; Luca Longinotti <chtekk@gentoo.org> -adodb-4.55.ebuild,
  -adodb-4.62.ebuild, -adodb-4.64.ebuild, -adodb-4.65.ebuild:
  Remove old-style PHP packages.

  27 Feb 2006; Simon Stelling <blubb@gentoo.org> adodb-4.72.ebuild:
  stable on amd64 wrt bug 123442

  26 Feb 2006; Tobias Scherbaum <dertobi123@gentoo.org> adodb-4.72.ebuild:
  ppc stable, bug #123442

  26 Feb 2006; Bryan Østergaard <kloeri@gentoo.org adodb-4.72.ebuild:
  Stable on alpha + ia64, bug 123442.

  25 Feb 2006; Mark Loeser <halcy0n@gentoo.org> adodb-4.72.ebuild:
  Stable on x86; bug #123442

  23 Feb 2006; Markus Rothe <corsair@gentoo.org> adodb-4.72.ebuild:
  Stable on ppc64; bug #123442

*adodb-4.72 (23 Feb 2006)

  23 Feb 2006; Luca Longinotti <chtekk@gentoo.org> +adodb-4.72.ebuild:
  Version bump, fixes bug #123442.
