@@ -1,5 +1,6 @@
 DIST adodb472.tgz 426876 RMD160 bef1c3f3bca24d28eeecfb455b8116049a598ef1 SHA1 0e10f864854a369de425dbf12f354074f9bd27c0 SHA256 434d28e411b957d7e8c5b973daa53239e30fc12d895dc127e5f7cbc7d54eb50c
 DIST adodb494.tgz 470723 RMD160 ebddc3f70fb219d23ea952d89d85ee6eeaf2ad7e SHA1 46c212e3f7afd3da2d0a6147372261fd9453324e SHA256 8637763578df3aacfc608d017124f98e46dd212b34dbf6e8c3bda4226d377b42
+DIST adodb495a.tgz 472713 RMD160 e258f85c1548a334e68787cdc87ddc8ca1978a6d SHA1 39158fac0cb39e9604706aa63bb78107125bc031 SHA256 80ebb74faf4a6f7dacf1e865cb09f2b534edb19f257c48790b37973fae18baa5
 EBUILD adodb-4.72.ebuild 900 RMD160 9e6ec8ef4994b6bd5d9c3bda5f80e13c1f7782df SHA1 9dbb3ebc755fd80a509a7ae7d50f91dd025392f8 SHA256 74ec3594546481af9837ab03e8f60b0c67236d26ebfa47ef0e7bd0f640a319c6
 MD5 d5e876b18d6be384fbd4becc30938928 adodb-4.72.ebuild 900
 RMD160 9e6ec8ef4994b6bd5d9c3bda5f80e13c1f7782df adodb-4.72.ebuild 900
@@ -8,10 +9,14 @@ EBUILD adodb-4.94.ebuild 907 RMD160 7b9cbe7c8020275f1093c09627f0995c619415ef SHA
 MD5 afdfb487a24881d3daa4992e47f058b1 adodb-4.94.ebuild 907
 RMD160 7b9cbe7c8020275f1093c09627f0995c619415ef adodb-4.94.ebuild 907
 SHA256 b0fa012f26f13de9330f0d2e790047b68718712108f8c3d48eada011ce6d1c08 adodb-4.94.ebuild 907
-MISC ChangeLog 7918 RMD160 2be4667ea86431bf22930766c6082f279be03720 SHA1 bffe25d741b537ee625334f45450a26c66e46fa6 SHA256 22f13e384e15a73e049b7dea6fdae29b7a63cc8b531030de889630fd34f13813
-MD5 7123d41d632b0615daf884caeed1e76b ChangeLog 7918
-RMD160 2be4667ea86431bf22930766c6082f279be03720 ChangeLog 7918
-SHA256 22f13e384e15a73e049b7dea6fdae29b7a63cc8b531030de889630fd34f13813 ChangeLog 7918
+EBUILD adodb-4.95a.ebuild 911 RMD160 b6e8db0a349d2e28e4b3873a80b56363d6d1d47c SHA1 43fcb1eaf82be9fb1160a41c272c233a35bd4596 SHA256 a23e41527a0287a9d306ffa90e6c43e32cc5da5c7656ef54e394a3d81aedcd36
+MD5 230b47fcec6e3b73c62cdf5b1755b3f5 adodb-4.95a.ebuild 911
+RMD160 b6e8db0a349d2e28e4b3873a80b56363d6d1d47c adodb-4.95a.ebuild 911
+SHA256 a23e41527a0287a9d306ffa90e6c43e32cc5da5c7656ef54e394a3d81aedcd36 adodb-4.95a.ebuild 911
+MISC ChangeLog 8012 RMD160 2057260146416eab5034d23bb6e48fcafa684da2 SHA1 c07dd016cf96da314f83e29c72748d76b1431e2e SHA256 3ab33e86a8081b37e9ea8cbc4c62d3bdbfb9cb839e42811b168f17fc994d0968
+MD5 cfcfe6062ed0968ab2c8e273178568af ChangeLog 8012
+RMD160 2057260146416eab5034d23bb6e48fcafa684da2 ChangeLog 8012
+SHA256 3ab33e86a8081b37e9ea8cbc4c62d3bdbfb9cb839e42811b168f17fc994d0968 ChangeLog 8012
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
 MD5 c58d07ca1c1235bbad9bccaec96fc062 metadata.xml 157
 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a metadata.xml 157
@@ -22,3 +27,6 @@ SHA256 8bd40876184b1ca6f1446d41c9413aa3e0a90ca180d7532fe773733aca5ddb7e files/di
 MD5 9094144d2ffde8b874d8104d680eb479 files/digest-adodb-4.94 217
 RMD160 88f233774d1f8cfae24a009bff64b641ba9949c4 files/digest-adodb-4.94 217
 SHA256 b3bc5865819c2f29e78487859ac3df38fee68b947e6f59d992472231fd11dac1 files/digest-adodb-4.94 217
+MD5 ff7d101b0f0035f5ca1b14bc66ed7676 files/digest-adodb-4.95a 220
+RMD160 7a6c7426f0dfb54097a180f76bbc7130da121a48 files/digest-adodb-4.95a 220
+SHA256 389fe4ef7178b20b2b00fe59ca126f13260d5253d176f8c5db91c7e126c3e2e8 files/digest-adodb-4.95a 220
