@@ -1,0 +1,3 @@
+MD5 3f470830f7932a8a33e0c42949fa1470 adodb495a.tgz 472713
+RMD160 e258f85c1548a334e68787cdc87ddc8ca1978a6d adodb495a.tgz 472713
+SHA256 80ebb74faf4a6f7dacf1e865cb09f2b534edb19f257c48790b37973fae18baa5 adodb495a.tgz 472713
